# whaleback

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docs/: api.md  frontend.md  pipeline.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: use-scroll-spy.ts
frontend/src/lib/: api.ts  parse-report.ts  queries.ts  utils.ts
frontend/src/providers/: query-provider.tsx
frontend/src/types/: api.ts
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_whale_expansion_simulation_sector_flow.py  003_simulation_model_breakdown.py  004_news_sentiment.py  005_add_market_summary.py  006_add_missing_columns.py
scripts/: backfill.py  docker-entrypoint.sh  run_dev.sh  safe_backfill.sh  smoke_test.py
src/whaleback/: __main__.py  config.py  logging_config.py
src/whaleback/analysis/: __init__.py  composite.py  compute.py  flow.py  market_summary.py  news_scorer.py  quant.py  risk.py  sector_flow.py  sentiment.py  simulation.py  technical.py  trend.py  whale.py
src/whaleback/api/: krx_client.py
src/whaleback/collectors/: __init__.py  base.py  fundamentals.py  index.py  investor.py  news.py  ohlcv.py  sector.py  stock_list.py
src/whaleback/db/: async_repositories.py  (+3 more)
tests/: conftest.py  test_analysis_quant.py  test_analysis_trend.py  test_analysis_whale.py  test_news_collector.py  test_sentiment.py  test_sim_models.py  test_simulation_ensemble.py
(+52 files in other folders)
